# libstqbackend

acl/: Cargo.toml
acl/src/: lib.rs
api/: Cargo.toml  README.MD
api/src/: errors.rs  lib.rs  orders.rs  roles.rs  rpc_client.rs  types.rs  util.rs  warehouses.rs
cache/: docker-compose.yml
cache/src/cache/: mod.rs  redis.rs  typed.rs
cache/tests/: redis_cache.rs
db/: Cargo.toml
db/src/: connection.rs  lib.rs  pool.rs  repo.rs  statement.rs
diesel_macro_derive/src/: lib.rs
http/: Cargo.toml
http/src/: client.rs  controller.rs  errors.rs  lib.rs  query_util.rs  request_util.rs  router.rs  system.rs
http/src/client/: mod.rs  time_limited.rs  with_headers.rs
logging/: Cargo.toml
logging/src/: lib.rs
roles/: Cargo.toml
roles/src/: lib.rs  models.rs  repo.rs  routing.rs  service.rs
router/: Cargo.toml
router/src/: lib.rs  model.rs  service.rs
routes/: Cargo.toml
routes/src/: lib.rs  model.rs  service.rs
static_resources/: Cargo.toml
static_resources/src/: currency.rs  delivery.rs  emails.rs  language.rs  lib.rs  moderation_status.rs  order_status.rs  project.rs
types/: Cargo.toml
types/src/: enums.rs  lib.rs  newtypes.rs  structs.rs
