[package]
name = "stq_api"
version = "0.1.0"

[dependencies]
chrono = { version = "*", features = ["serde"] }
failure = "0.1"
futures = "0.1"
geo = "*"
hyper = "0.12"
lazy_static = "*"
regex = "*"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "3424e91746f64a50bd02408750a5f01eef2abd5f" }
serde = "*"
serde_derive = "*"
serde_json = "*"
stq_roles = { path = "../roles" }
stq_router = { path = "../router" }
stq_static_resources = { path = "../static_resources" }
stq_types = { path = "../types" }
validator_derive = "*"
validator = "*"
