[package]
name = "stq_types"
version = "0.1.0"

[dependencies]
derive_more = "*"
diesel = { version = "1.3.2", features = ["postgres", "extras"] }
failure = "0.1"
futures = "0.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
stq_acl = { path = "../acl" }
stq_db = { path = "../db" }
uuid = { version = "*", features = ["serde", "v4"] }
stq_diesel_macro_derive = { path = "../diesel_macro_derive" }
stq_static_resources = { path = "../static_resources" }
