[package]
name = "stq_types"
version = "0.1.0"

[dependencies]
derive_more = "0.11"
diesel = { version = "1.3.2", features = ["postgres", "extras"] }
failure = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stq_acl = { path = "../acl" }
stq_db = { path = "../db" }
uuid = { version = "*", features = ["serde", "v4"] }
stq_diesel_macro_derive = { path = "../diesel_macro_derive" }
stq_static_resources = { path = "../static_resources" }
